# HelloWorldGnome4Python

./: README.md  de.cmg.HelloWorldGnome4Python.json  meson.build
data/: de.cmg.HelloWorldGnome4Python.desktop.in  de.cmg.HelloWorldGnome4Python.gschema.xml  de.cmg.HelloWorldGnome4Python.metainfo.xml.in  de.cmg.HelloWorldGnome4Python.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: helloworldgnome4python.gresource.xml  helloworldgnome4python.in  main.py  meson.build  window.py  window.ui
